`<div>`s directly inside a `.button-wrap` should always have `display: inline-block` as well, otherwise they will not be aligned correctly.
This solves our problem of the authority not being aligned.

--- a/core/app/assets/stylesheets/frontend.css.less
+++ b/core/app/assets/stylesheets/frontend.css.less
@@ -387,6 +387,10 @@ img {
         position: absolute;
         line-height: 30px;
         display: inline-block;
+
+        > div {
+          display: inline-block;
+        }
       }
 
       .tabs {
